Removed fixed margins from style -> this way, table in the middle on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
     width: 100%;
-    margin-left: 30px;
-    margin-right: 30px;
     background: #f9f9f9;
     color: #666;
     font-family: Helvetica, Arial;
